--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1762</width>
-    <height>956</height>
+    <width>1649</width>
+    <height>975</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,9 +21,9 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QWidget" name="verticalLayoutWidget_2">
-       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <layout class="QVBoxLayout" name="JsonFrame">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <layout class="QHBoxLayout" name="JsonOptions_2">
           <item>
            <widget class="QLabel" name="JsonPath">
             <property name="text">
@@ -32,7 +32,7 @@
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer_2">
+           <spacer name="JsonOptionsSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -110,9 +110,16 @@
        </layout>
       </widget>
       <widget class="QWidget" name="verticalLayoutWidget">
-       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="10,0">
+       <layout class="QVBoxLayout" name="PlayerFrame" stretch="10,0,0">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <layout class="QHBoxLayout" name="ImagePlayer">
+          <item>
+           <widget class="Line" name="SplitLineVercical">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
+          </item>
           <item>
            <widget class="QLabel" name="Picture">
             <property name="sizePolicy">
@@ -135,9 +142,16 @@
          </layout>
         </item>
         <item>
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <spacer name="horizontalSpacer">
+           <spacer name="PlaybackOptionsSpacer1">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -171,7 +185,7 @@
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer_3">
+           <spacer name="PlaybackOptionsSpacer2">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -203,7 +217,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1762</width>
+     <width>1649</width>
      <height>26</height>
     </rect>
    </property>
