--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1649</width>
-    <height>975</height>
+    <width>1674</width>
+    <height>1091</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,11 +21,11 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QWidget" name="verticalLayoutWidget_2">
-       <layout class="QVBoxLayout" name="JsonFrame">
+       <layout class="QVBoxLayout" name="json_frame">
         <item>
-         <layout class="QHBoxLayout" name="JsonOptions_2">
+         <layout class="QHBoxLayout" name="json_options2">
           <item>
-           <widget class="QLabel" name="JsonPath">
+           <widget class="QLabel" name="json_path">
             <property name="text">
              <string>JSON path</string>
             </property>
@@ -45,7 +45,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="CopyPath">
+           <widget class="QPushButton" name="copy_path">
             <property name="text">
              <string>Copy</string>
             </property>
@@ -61,7 +61,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QTableWidget" name="tableWidget">
+         <widget class="QTableWidget" name="table_widget">
           <property name="autoFillBackground">
            <bool>false</bool>
           </property>
@@ -110,18 +110,18 @@
        </layout>
       </widget>
       <widget class="QWidget" name="verticalLayoutWidget">
-       <layout class="QVBoxLayout" name="PlayerFrame" stretch="10,0,0">
+       <layout class="QVBoxLayout" name="player_frame" stretch="10,0,0">
         <item>
-         <layout class="QHBoxLayout" name="ImagePlayer">
+         <layout class="QHBoxLayout" name="image_player">
           <item>
-           <widget class="Line" name="SplitLineVercical">
+           <widget class="Line" name="split_line_vertical">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="Picture">
+           <widget class="QLabel" name="picture_frame">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -149,9 +149,9 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout">
+         <layout class="QHBoxLayout" name="horizontal_layout">
           <item>
-           <spacer name="PlaybackOptionsSpacer1">
+           <spacer name="playback_options_spacer1">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -164,28 +164,28 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="Back">
+           <widget class="QPushButton" name="back_btn">
             <property name="text">
              <string>Step back</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="PlayPause">
+           <widget class="QPushButton" name="playback_btn">
             <property name="text">
              <string>PlayPause</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="Forward">
+           <widget class="QPushButton" name="forward_btn">
             <property name="text">
              <string>Forward</string>
             </property>
            </widget>
           </item>
           <item>
-           <spacer name="PlaybackOptionsSpacer2">
+           <spacer name="playback_options_spacer2">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -198,7 +198,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="Runtime">
+           <widget class="QLabel" name="runtime_lbl">
             <property name="text">
              <string>Runtime</string>
             </property>
@@ -217,20 +217,20 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1649</width>
+     <width>1674</width>
      <height>26</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
+   <widget class="QMenu" name="menu_file">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionOpen"/>
+    <addaction name="action_open"/>
    </widget>
-   <addaction name="menuFile"/>
+   <addaction name="menu_file"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionOpen">
+  <action name="action_open">
    <property name="text">
     <string>Open...</string>
    </property>
