--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -143,7 +143,7 @@
              <bool>true</bool>
             </property>
             <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+             <set>Qt::AlignCenter</set>
             </property>
             <property name="margin">
              <number>16</number>
