--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1674</width>
-    <height>1091</height>
+    <width>1214</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,6 +28,9 @@
            <widget class="QLabel" name="json_path">
             <property name="text">
              <string>JSON path</string>
+            </property>
+            <property name="indent">
+             <number>6</number>
             </property>
            </widget>
           </item>
@@ -214,7 +217,20 @@
              <string>Runtime</string>
             </property>
             <property name="margin">
+             <number>0</number>
+            </property>
+            <property name="indent">
              <number>7</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QProgressBar" name="progress_bar">
+            <property name="value">
+             <number>24</number>
+            </property>
+            <property name="invertedAppearance">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -231,7 +247,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1674</width>
+     <width>1214</width>
      <height>26</height>
     </rect>
    </property>
