--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -13,20 +13,8 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="central_widget">
    <layout class="QHBoxLayout" name="horizontalLayout_5">
-    <item>
-     <widget class="QTreeWidget" name="tree_widget">
-      <property name="tabKeyNavigation">
-       <bool>true</bool>
-      </property>
-      <column>
-       <property name="text">
-        <string notr="true">1</string>
-       </property>
-      </column>
-     </widget>
-    </item>
     <item>
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
