--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -36,6 +36,12 @@
           </item>
           <item>
            <widget class="QLabel" name="json_path">
+            <property name="minimumSize">
+             <size>
+              <width>1</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>Use File =&gt; Open... or Forward button to start</string>
             </property>
@@ -59,15 +65,14 @@
           </item>
           <item>
            <widget class="QPushButton" name="copy_path">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>Copy</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="JsonOptions">
-            <property name="text">
-             <string>Options</string>
             </property>
            </widget>
           </item>
@@ -282,7 +287,13 @@
     </property>
     <addaction name="action_open"/>
    </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+   </widget>
    <addaction name="menu_file"/>
+   <addaction name="menuOptions"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="action_open">
