--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1928</width>
-    <height>747</height>
+    <height>988</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -81,48 +81,62 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QTabWidget" name="tab_widget">
-            <property name="tabShape">
-             <enum>QTabWidget::Rounded</enum>
+           <widget class="QScrollArea" name="scrollArea">
+            <property name="widgetResizable">
+             <bool>true</bool>
             </property>
-            <property name="currentIndex">
-             <number>0</number>
-            </property>
-            <widget class="QWidget" name="tab_3">
-             <attribute name="title">
-              <string>Tab 1</string>
-             </attribute>
-             <layout class="QVBoxLayout" name="verticalLayout_3">
+            <widget class="QWidget" name="scrollAreaWidgetContents_8">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>645</width>
+               <height>877</height>
+              </rect>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_7">
               <item>
-               <widget class="QPushButton" name="btn_step">
-                <property name="text">
-                 <string>Step 1</string>
+               <widget class="QTabWidget" name="tab_widget_2">
+                <property name="tabShape">
+                 <enum>QTabWidget::Rounded</enum>
                 </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QTableWidget" name="step_table">
-                <attribute name="horizontalHeaderStretchLastSection">
-                 <bool>true</bool>
-                </attribute>
-                <column>
-                 <property name="text">
-                  <string>Time</string>
-                 </property>
-                </column>
-                <column>
-                 <property name="text">
-                  <string>Action</string>
-                 </property>
-                </column>
+                <property name="currentIndex">
+                 <number>0</number>
+                </property>
+                <widget class="QWidget" name="tab_4">
+                 <attribute name="title">
+                  <string>Attempts</string>
+                 </attribute>
+                 <layout class="QVBoxLayout" name="verticalLayout_6">
+                  <item>
+                   <widget class="QPushButton" name="btn_step_2">
+                    <property name="text">
+                     <string>Step 1</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QTableWidget" name="step_table_2">
+                    <attribute name="horizontalHeaderStretchLastSection">
+                     <bool>true</bool>
+                    </attribute>
+                    <column>
+                     <property name="text">
+                      <string>Time</string>
+                     </property>
+                    </column>
+                    <column>
+                     <property name="text">
+                      <string>Action</string>
+                     </property>
+                    </column>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
                </widget>
               </item>
              </layout>
-            </widget>
-            <widget class="QWidget" name="tab_4">
-             <attribute name="title">
-              <string>Tab 2</string>
-             </attribute>
             </widget>
            </widget>
           </item>
