--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -34,10 +34,13 @@
           <item>
            <widget class="QScrollArea" name="scrollArea">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="verticalScrollBarPolicy">
+             <enum>Qt::ScrollBarAlwaysOn</enum>
             </property>
             <property name="widgetResizable">
              <bool>true</bool>
@@ -47,7 +50,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>183</width>
+               <width>416</width>
                <height>913</height>
               </rect>
              </property>
