--- a/ViewerGUI.ui
+++ b/ViewerGUI.ui
@@ -34,7 +34,7 @@
           <item>
            <widget class="QScrollArea" name="scrollArea">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -50,7 +50,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>437</width>
+               <width>658</width>
                <height>913</height>
               </rect>
              </property>
@@ -58,15 +58,18 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_2">
                 <item>
-                 <widget class="QPushButton" name="copy_path">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
+                 <widget class="QLabel" name="json_path">
+                  <property name="minimumSize">
+                   <size>
+                    <width>1</width>
+                    <height>0</height>
+                   </size>
                   </property>
                   <property name="text">
-                   <string>Copy</string>
+                   <string>Use File =&gt; Open... or Forward button to start</string>
+                  </property>
+                  <property name="indent">
+                   <number>6</number>
                   </property>
                  </widget>
                 </item>
@@ -84,18 +87,15 @@
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QLabel" name="json_path">
-                  <property name="minimumSize">
-                   <size>
-                    <width>1</width>
-                    <height>0</height>
-                   </size>
+                 <widget class="QPushButton" name="copy_path">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
                   </property>
                   <property name="text">
-                   <string>Use File =&gt; Open... or Forward button to start</string>
-                  </property>
-                  <property name="indent">
-                   <number>6</number>
+                   <string>Copy</string>
                   </property>
                  </widget>
                 </item>
@@ -103,6 +103,12 @@
               </item>
               <item>
                <widget class="QTabWidget" name="tab_widget_2">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="tabShape">
                  <enum>QTabWidget::Rounded</enum>
                 </property>
@@ -123,8 +129,26 @@
                   </item>
                   <item>
                    <widget class="QTableWidget" name="step_table_2">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>500</height>
+                     </size>
+                    </property>
+                    <property name="rowCount">
+                     <number>0</number>
+                    </property>
                     <attribute name="horizontalHeaderStretchLastSection">
                      <bool>true</bool>
+                    </attribute>
+                    <attribute name="verticalHeaderStretchLastSection">
+                     <bool>false</bool>
                     </attribute>
                     <column>
                      <property name="text">
